# santa-mailroom

./: .gitignore  COPYRIGHT.md  PLAN-TASKS.md  PLAN-WALKTHROUGH.md  README.md  USER-GUIDE.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  invite_cli.py  pyproject.toml  requirements.txt  test_rich_email.py
backend/alembic/: env.py
backend/alembic/versions/: 17163de390f8_add_i18n_fields_to_notifications.py  28015ad08212_increase_santa_code_column_length.py  36bec497c5b4_add_invite_codes_table.py  3b1850a696a3_add_language_to_children.py  46688856f616_add_sent_emails_table.py  8a1c2d3e4f5g_add_is_readonly_to_users.py  d019a8ee92a7_add_santa_code_to_families.py  e946ff3047dc_add_description_field_to_children.py
backend/app/: __init__.py  auth.py  celery_app.py  config.py  database.py  job_queue.py  main.py  models.py  rate_limit.py  schemas.py  tasks.py  worker.py
backend/app/email_templates/: image_catalog.py  santa_reply.html  santa_reply_v2.html
backend/app/prompts/: __init__.py  base.py  deed_congrats.py  deed_email.py  deed_similarity.py  extraction.py  language.py  product_search.py  safety.py  santa_email.py
backend/app/routers/: auth.py  children.py  deeds.py  family.py  letters.py  moderation.py  notifications.py  sent_emails.py  wishlist.py
backend/app/services/: __init__.py  email_service.py  gpt_service.py  notification_service.py  product_search_service.py
backend/test_output/: santa_email.html  santa_email.txt
backend/tests/: conftest.py  test_auth_security.py  test_authorization_security.py  test_input_validation.py  test_readonly_user.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  (+5 more)
(+35 files in other folders)
